--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>mroussetos</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <title>Michael Roussetos</title>
 
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" type="text/css" href="../bower_components/normalize-css/normalize.css">
-
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="styles/MyFontsWebfontsKit.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/animate.css">
 
@@ -41,17 +44,17 @@
   <nav id="navbar"><span></span>
     <a id="nav-toggle" href="#"><span></span></a>
         <ul>
-          <li><a href="#video" title="Video">Video Production</a></li>
-          <li><a href="#editorial" title="Editorial Work">Editorial Design</a></li>
+          <li><a href="#video" title="Video">Video</a></li>
+          <li><a href="#editorial" title="Editorial Work">Print Design</a></li>
           <li><a href="#postcards" title="Postcards">Postcards</a></li>
           <li><a href="#curiosities" title="Curiosities">Curiosities</a></li>
           <li><a href="#instagram" title="Social-Media">Instagram</a></li>
-          <li><a href="#contactme" title="Lorem">Contact Me</a></li>
+          <li><a href="#contactme" title="Lorem">Follow Me</a></li>
         </ul>
   </nav>
 
     <h1>
-    <span id="titlescreen"><img src="images/roussetos-ca.png"></span>
+    <span id="titlescreen" class="animated zoomIn">roussetos</span>
     </h1>
 
 <ul>
@@ -66,9 +69,10 @@
 <a id="video"></a>
 
   <section class="video">
-    <h2>Video Production</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <h2>Video</h2>
+    <p>Jamaica 2014 is a short documentary film on our honeymoon vacation. The film details underwater excursions and as well as never before seen footage at Ricks Cafe, Sunset Beach and Negril. The film captures unimaginable beauty of this incredible island country.</p>
 
+<hr>
 
 <div class="movie" id="homepage">
 
@@ -82,325 +86,88 @@
 <a id="editorial"></a>
 <section>
 
-    <h2>Editorial Design</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <h2>Print Design</h2>
+    <p>Check it out! <strong>Geico NOW</strong> A 32-page magazine designed to serve as a helpful resource to inspire and educate policyholders. 7 million circulation. <strong>Acura Style</strong> A 64-page glossy luxury lifestyle magazine designed to engage and inform Acura owners.
+    </p>
 
-<div class="work1">
+<hr>
 
-
-</div>
-
-<ul class="add"><li>
-  <div class="work">
-
-  <a href="images/geico_slide2.jpg">
-  <img src="images/geico_slide2.jpg" alt="" />
-  </a>
-
-  <a href="images/geico_slide2a.jpg">
-  <img src="images/geico_slide2a.jpg" alt="" />
-  </a>
-</div>
-</li></ul>
-
-<ul class="add"><li>
 <div class="work">
 
-  <a href="images/geico_slide3.jpg">
-  <img src="images/geico_slide3.jpg" alt="" />
+  <a href="images/GN_FW14_Fast-Lane_1st-Proof-1.jpg">
+  <img src="images/GN_FW14_Fast-Lane_1st-Proof-1.jpg" alt="" />
   </a>
 
-  <a href="images/geico_slide4.jpg">
-  <img src="images/geico_slide4.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/geico_slide5.jpg">
-  <img src="images/geico_slide5.jpg" alt="" />
-  </a>
-
-  <a href="images/geico_slide6.jpg">
-  <img src="images/geico_slide6.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/geico_slide2b.jpg">
-  <img src="images/geico_slide2b.jpg" alt="" />
-  </a>
-
-  <a href="images/geico_slide11.jpg">
-  <img src="images/geico_slide11.jpg" alt="" />
-  </a>
-
-  <a href="images/geico_slide1.jpg">
-  <img src="images/geico_slide1.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/acura_slide1.jpg">
-  <img src="images/acura_slide1.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide2.jpg">
-  <img src="images/acura_slide2.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide3.jpg">
-  <img src="images/acura_slide3.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/acura_slide11.jpg">
-  <img src="images/acura_slide11.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide12.jpg">
-  <img src="images/acura_slide12.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide13.jpg">
-  <img src="images/acura_slide13.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/acura_slide4.jpg">
-  <img src="images/acura_slide4.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide5.jpg">
-  <img src="images/acura_slide5.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/acura_slide6.jpg">
-  <img src="images/acura_slide6.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide7.jpg">
-  <img src="images/acura_slide7.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/acura_slide8.jpg">
-  <img src="images/acura_slide8.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide9.jpg">
-  <img src="images/acura_slide9.jpg" alt="" />
-  </a>
-
-  <a href="images/acura_slide10.jpg">
-  <img src="images/acura_slide10.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/lgfb_slide13.jpg">
-  <img src="images/lgfb_slide13.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide14.jpg">
-  <img src="images/lgfb_slide14.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide10.jpg">
-  <img src="images/lgfb_slide10.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/lgfb_slide8.jpg">
-  <img src="images/lgfb_slide8.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide7.jpg">
-  <img src="images/lgfb_slide7.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/lgfb_slide11.jpg">
-  <img src="images/lgfb_slide11.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide12.jpg">
-  <img src="images/lgfb_slide12.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/lgfb_slide4.jpg">
-  <img src="images/lgfb_slide4.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide5.jpg">
-  <img src="images/lgfb_slide5.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/lgfb_slide1.jpg">
-  <img src="images/lgfb_slide1.jpg" alt="" />
-  </a>
-
-  <a href="images/lgfb_slide3.jpg">
-  <img src="images/lgfb_slide3.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/rouge_slide1.jpg">
-  <img src="images/rouge_slide1.jpg" alt="" />
-  </a>
-
-  <a href="images/rouge_slide7.jpg">
-  <img src="images/rouge_slide7.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/rouge_slide5.jpg">
-  <img src="images/rouge_slide5.jpg" alt="" />
-  </a>
-
-  <a href="images/rouge_slide6.jpg">
-  <img src="images/rouge_slide6.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/rouge_slide2.jpg">
-  <img src="images/rouge_slide2.jpg" alt="" />
-  </a>
-
-  <a href="images/rouge_slide3.jpg">
-  <img src="images/rouge_slide3.jpg" alt="" />
-  </a>
-
-  <a href="images/rouge_slide4.jpg">
-  <img src="images/rouge_slide4.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/belle_slide1.jpg">
-  <img src="images/belle_slide1.jpg" alt="" />
-  </a>
-
-  <a href="images/belle_slide2.jpg">
-  <img src="images/belle_slide2.jpg" alt="" />
-  </a>
-
-  <a href="images/belle_slide3.jpg">
-  <img src="images/belle_slide3.jpg" alt="" />
-  </a>
-
-  <a href="images/belle_slide4.jpg">
-  <img src="images/belle_slide4.jpg" alt="" />
-  </a>
-
-</div>
-</li></ul>
-
-<ul class="add"><li>
-<div class="work">
-
-  <a href="images/citybites_slide1.jpg">
-  <img src="images/citybites_slide1.jpg" alt="" />
+ <a href="images/GN_FW14_Fast-Lane_1st-Proof-2.jpg">
+  <img src="images/GN_FW14_Fast-Lane_1st-Proof-2.jpg" alt="" />
   </a>
 
 </div>
 
 <div class="work">
 
-  <a href="images/glidden_slide1.jpg">
-  <img src="images/glidden_slide1.jpg" alt="" />
+  <a href="images/geico-mil-cover.jpg">
+  <img src="images/geico-mil-cover.jpg" alt="" />
+  </a>
+
+  <a href="images/GN_FW14_Faces_Snake_1st-Proof.jpg">
+  <img src="images/GN_FW14_Faces_Snake_1st-Proof.jpg" alt="" />
+  </a>
+
+  <a href="images/GN_SS14_LOW-37.jpg">
+  <img src="images/GN_SS14_LOW-37.jpg" alt="" />
+  </a>
+
+  <a href="images/GN_SS14_LOW-19.jpg">
+  <img src="images/GN_SS14_LOW-19.jpg" alt="" />
   </a>
 
 </div>
-</li></ul>
 
+<div class="work">
+
+  <a href="images/Gieco_Fall13_compressed-1.jpg">
+  <img src="images/Gieco_Fall13_compressed-1.jpg" alt="" />
+  </a>
+
+ <a href="images/Gieco_Fall13_compressed-22.jpg">
+  <img src="images/Gieco_Fall13_compressed-22.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/GN_SS14_LOW-45.jpg">
+  <img src="images/GN_SS14_LOW-45.jpg" alt="" />
+  </a>
+
+ <a href="images/GN_SS14_LOW-51.jpg">
+  <img src="images/GN_SS14_LOW-51.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/FW14-Photoessay-1.jpg">
+  <img src="images/FW14-Photoessay-1.jpg" alt="" />
+  </a>
+
+ <a href="images/FW14-Photoessay-2.jpg">
+  <img src="images/FW14-Photoessay-2.jpg" alt="" />
+  </a>
+
+</div>
 </section>
-
-<button id="add_li">Add List</button>
-<button id="remove_li">Remove List</button>
 
 <a id="postcards"></a>
 <section>
 
     <h2>Postcards</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>These illustrations are insprired from the people around me.</p>
+
+<hr>
 
 <div class="work">
 
@@ -452,9 +219,24 @@
 <section>
 
     <h2>Curiosities</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>I found these things throughout the city and thought they have a strange and interesting quality.</p>
+
+<hr>
 
 <div class="work">
+
+  <a href="images/curiosity-slide21.jpg">
+  <img src="images/curiosity-slide21.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide22.jpg">
+  <img src="images/curiosity-slide22.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
   <a href="images/curiosity-slide1.jpg">
   <img src="images/curiosity-slide1.jpg" alt="" />
   </a>
@@ -553,18 +335,6 @@
 
 </div>
 
-<div class="work">
-
-  <a href="images/curiosity-slide21.jpg">
-  <img src="images/curiosity-slide21.jpg" alt="" />
-  </a>
-
-  <a href="images/curiosity-slide22.jpg">
-  <img src="images/curiosity-slide22.jpg" alt="" />
-  </a>
-
-</div>
-
 </section>
 
 <a id="instagram"></a>
@@ -572,20 +342,33 @@
 
 
 <h2>Instagram</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>I take a lot of photos, so check them out here!</p>
+
+<hr>
 
 <div>
-<a href="http://www.google.com"><div id="instafeed"></div></a>
-<img src="http://placehold.it/640x640">
+<div id="instafeed">
 </div>
+
+<img src="http://placehold.it/640x640">
+
 
 </section>
 
 <a id="contactme"></a>
+
 <footer>
 
+<div>
+<ul>
+<li><a href="http://instagram.com/mroussetos"><img src="images/followmeinstagram.png"></a></li>
+<li><a href="https://twitter.com/mroussetos"><img src="images/followmetwitter.png"></a></li>
+</ul>
+</div>
 
-  <ul><li>Made by <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014</li></ul>
+<div class="copywrite">
+&copy; <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014. All rights reserved.
+</div>
 
 </footer>
 
@@ -601,7 +384,6 @@
     <script src="scripts/jquery.fluidbox.min.js"></script>
     <script src="scripts/fluidbox.js"></script>
     <script src="scripts/instafeed.min.js"></script>
-    <script src="scripts/function.js"></script>
     <!-- endbuild -->
   </body>
 </html>
