--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/MyFontsWebfontsKit.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/animate.css">
+    <link rel="icon" type="image/ico" href="images/favicon.png"/>
 
 
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -42,7 +43,7 @@
 
   <header>
   <nav id="navbar"><span></span>
-    <a id="nav-toggle" href="#"><span></span></a>
+    <a id="nav-toggle" class="animated zoomIn" href="#"><span></span></a>
         <ul>
           <li><a href="#video" title="Video">Video</a></li>
           <li><a href="#editorial" title="Editorial Work">Print Design</a></li>
@@ -87,7 +88,7 @@
 <section>
 
     <h2>Print Design</h2>
-    <p>Check it out! <strong>Geico NOW</strong> A 32-page magazine designed to serve as a helpful resource to inspire and educate policyholders. 7 million circulation. <strong>Acura Style</strong> A 64-page glossy luxury lifestyle magazine designed to engage and inform Acura owners.
+    <p>Check it out! <strong>Geico NOW</strong> A 32-page magazine designed to serve <br>as a helpful resource to inspire and educate policyholders. 7 million circulation. <strong>Acura Style</strong> A 64-page glossy luxury lifestyle magazine designed to engage and inform Acura owners.
     </p>
 
 <hr>
@@ -165,7 +166,7 @@
 <section>
 
     <h2>Postcards</h2>
-    <p>These illustrations are insprired from the people around me.</p>
+    <p>These illustrations are usually “insider humour” <br>on the industry – poking fun at ourselves.</p>
 
 <hr>
 
@@ -219,7 +220,7 @@
 <section>
 
     <h2>Curiosities</h2>
-    <p>I found these things throughout the city and thought they have a strange and interesting quality.</p>
+    <p>I found these things throughout the city and thought<br> they have a strange and interesting quality.</p>
 
 <hr>
 
@@ -337,6 +338,8 @@
 
 </section>
 
+
+
 <a id="instagram"></a>
 <section>
 
@@ -354,6 +357,19 @@
 
 
 </section>
+
+<section>
+
+
+<h2>Who is this guy?</h2>
+<p>A graduate of George Brown for Advertising and Design, Michael Roussetos is a Toronto-based graphic designer with a wide-ranging expertise and experience in consumer magazines and custom publishing, both in print and online. He recently finished a Front End Web Development course that helped him publish this site.</p>
+
+<hr>
+
+</section>
+
+
+
 
 <a id="contactme"></a>
 
