--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Michael Roussetos</title>
 
@@ -56,7 +55,7 @@
   </nav>
 
     <h1>
-    <span id="titlescreen" class="animated zoomIn">roussetos</span>
+    <span id="titlescreen" class="animated zoomIn">roussetos<br></span>
     </h1>
 
 <ul>
@@ -72,7 +71,7 @@
 
   <section class="video">
     <h2>Video</h2>
-    <p>Jamaica 2014 is a short documentary film on our honeymoon vacation. The film details underwater excursions and as well as never before seen footage at Ricks Cafe, Sunset Beach and Negril. The film captures unimaginable beauty of this incredible island country.</p>
+    <p>Jamaica 2014 is a short documentary film of a honeymoon vacation. The film details underwater excursions and as well as never before seen footage at Ricks Cafe, Sunset Beach and Negril. The film captures unimaginable beauty of this incredible island country. All shot with a Go Pro.</p>
 
 <hr>
 
@@ -89,7 +88,7 @@
 <section>
 
     <h2>Print Design</h2>
-    <p>Check it out! <strong>Geico NOW</strong> A 32-page magazine designed to serve <br>as a helpful resource to inspire and educate policyholders. 7 million circulation. <strong>Acura Style</strong> A 64-page glossy luxury lifestyle magazine designed to engage and inform Acura owners.
+    <p>Check it out! <strong>Geico NOW</strong> A 32-page magazine designed to serve as a helpful resource to inspire and educate policyholders. 7 million circulation. <strong>Acura Style</strong> A 64-page glossy luxury lifestyle magazine designed to engage and inform Acura owners.
     </p>
 
 <hr>
@@ -167,7 +166,7 @@
 <section>
 
     <h2>Postcards</h2>
-    <p>These illustrations are usually “insider humour” <br>on the industry – poking fun at ourselves.</p>
+    <p>These illustrations are usually “insider humour” on the industry – poking fun at ourselves.</p>
 
 <hr>
 
@@ -221,7 +220,7 @@
 <section>
 
     <h2>Curiosities</h2>
-    <p>I found these things throughout the city and thought<br> they have a strange and interesting quality.</p>
+    <p>I found these things throughout the city and thought they have a strange and interesting quality.</p>
 
 <hr>
 
@@ -355,6 +354,7 @@
 
 </section>
 
+<a id="contactme"></a>
 <section>
 
 
@@ -368,7 +368,7 @@
 
 
 
-<a id="contactme"></a>
+
 
 <footer>
 
@@ -380,7 +380,7 @@
 </div>
 
 <div class="copywrite">
-&copy; <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014. All rights reserved.
+&copy; <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014. All rights reserved. This site is best viewed in Google Chrome.
 </div>
 
 </footer>
@@ -396,6 +396,7 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/jquery.fluidbox.min.js"></script>
     <script src="scripts/fluidbox.js"></script>
+    <script src="scripts/delay.js"></script>
     <!-- endbuild -->
   </body>
 </html>
