--- a/app/index.html
+++ b/app/index.html
@@ -75,10 +75,9 @@
 
 <hr>
 
-<div class="movie" id="homepage">
 
-<iframe src="//player.vimeo.com/video/91223826?title=0&amp;byline=0&amp;portrait=0" title="Daily Work" alt="dailywork" width="820px" height="461px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
+<iframe src="videos/Jamaica2014.m4v" width="600" height="475" frameborder="0"></iframe>
+
 
  </section>
 
@@ -359,7 +358,7 @@
 
 
 <h2>Who is this guy?</h2>
-<p>A graduate of George Brown for Advertising and Design, Michael Roussetos is a Toronto-based graphic designer with a wide-ranging expertise and experience in consumer magazines and custom publishing, both in print and online. He recently finished a Front End Web Development course that helped him publish this site.</p>
+<p>A graduate of George Brown College for Advertising and Design, Michael Roussetos is a Toronto-based graphic designer with a wide-ranging expertise and experience in consumer magazines and custom publishing, both in print and online. He recently finished a Front End Web Development course that helped publish this site.</p>
 
 <hr>
 
@@ -380,7 +379,7 @@
 </div>
 
 <div class="copywrite">
-&copy; <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014. All rights reserved. This site is best viewed in Google Chrome.
+&copy; <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014. All rights reserved. This site is best viewed 1024 x 768 in Google Chrome.
 </div>
 
 </footer>
@@ -396,7 +395,6 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/jquery.fluidbox.min.js"></script>
     <script src="scripts/fluidbox.js"></script>
-    <script src="scripts/delay.js"></script>
     <!-- endbuild -->
   </body>
 </html>
