--- a/app/index.html
+++ b/app/index.html
@@ -71,13 +71,21 @@
 
   <section class="video">
     <h2>Video</h2>
-    <p>Jamaica 2014 is a short documentary film of a honeymoon vacation. The film details underwater excursions and as well as never before seen footage at Ricks Cafe, Sunset Beach and Negril. The film captures unimaginable beauty of this incredible island country. All shot with a Go Pro.</p>
+    <p><strong>The Cobbler</strong> is a short documentary film of a successful tradesman. The film details never before seen footage of Spiros Roussetos at the pinacle of his career. The film captures the depth and breadth skill of a tradesman and incredible emotional look into his career. All shot with a shit Canon handheld camera.</p>
 
 <hr>
+<div class="wrapper">
+<iframe src="//player.vimeo.com/video/120985103?title=0&amp;byline=0&amp;portrait=0&amp;color=c9ff23" width="600" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 
 
-<iframe src="videos/Jamaica2014.m4v" width="600" height="475" frameborder="0"></iframe>
+<br>
 
+  <p><strong>Jamaica 2014</strong> is a short documentary film of a honeymoon vacation. The film details underwater excursions and as well as never before seen footage at Ricks Cafe, Sunset Beach and Negril. The film captures unimaginable beauty of this incredible island country. All shot with a Go Pro.</p>
+
+<div class="wrapper">
+<iframe src="//player.vimeo.com/video/91223826?title=0&amp;byline=0&amp;portrait=0&amp;color=c9ff23" width="600" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 
  </section>
 
